--- a/README.adoc
+++ b/README.adoc
@@ -3,19 +3,21 @@
 == Usage
 - `komido init`: init application
 - `komido prepareServer`: prepare server by installing necessary packages
+- `komido uploadState`: Upload latest backup/state to server
+- `komido backup`: Make backup of current server state
 
 == Todo
 * Use `Digital Ocean` API to create droplet for server
 ** Save droplet metainfo
-* Prepare `DO` droplet
-.. Connect using `ssh`
-.. Install `openjdk`
-* Upload server files
-.. server jar and configs
-.. world state
+* ☑ Prepare `DO` droplet
+.. ☑ Connect using `ssh`
+.. ☑ Install `openjdk`
+* ☑ Upload server files
+.. ☑ server jar and configs
+.. ☑ world state
 * Launch/stop server
-* Make backup
-.. Download world state
-.. Make archive
-.. Save meta-info (date, version, etc.)
+* ☑ Make backup
+.. ☑ Download world state
+.. ☑ Make archive
+.. ☑ Save meta-info (date, version, etc.)
 * Upgrade server version
